@@ -18,6 +18,7 @@ Version 2.5 ->
  - added JCC_VERSION string to modules using JCC
  - added support for --resources
  - added support for --import
+ - added read-only env.classpath property
  - 
 
 Version 2.4 -> 2.5
